Fix/improve websocket module and add HTTP module
Also renamed a bunch of stuff to avoid conflicts in consumers